--- a/visualize/style.css
+++ b/visualize/style.css
@@ -25,3 +25,9 @@ a {
   grid-column: 1 / 3;
   grid-row: 2;
 }
+button {
+  padding: 2px 8px;
+  margin: 1px;
+  background: #444;
+  color: white;
+}
